Dark mode added minor fixes done

--- a/css/dom-ejercicios.css
+++ b/css/dom-ejercicios.css
@@ -189,3 +189,30 @@ video {
 	visibility: hidden;
 	opacity: 0;
 }
+/* **********     DarkMode     ********** */
+.dark-mode-btn {
+	position: fixed;
+	z-index: 999;
+	bottom: 1vh;
+	left: 1vw;
+	width: 4rem;
+	height: 4rem;
+	border-radius: 50%;
+	font-size: 2rem;
+	font-weight: bold;
+	background-color: var(--main-color);
+	color: var(--second-color);
+	cursor: pointer;
+	outline: 0;
+	border: 0;
+	transition: all 0.3s ease-out;
+}
+.dark-mode-btn:hover {
+	background-color: var(--second-color);
+	color: var(--main-color);
+}
+
+.dark-mode {
+	background-color: var(--second-color);
+	color: var(--main-color);
+}
